--- a/notebooks/ro/T01_Intro.ipynb
+++ b/notebooks/ro/T01_Intro.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -83,14 +82,14 @@
       "source": [
         "## <font color=\"#e8710a\">Mediul de programare Google Colab</font>\n",
         "\n",
-        "**[Google Colab](https://colab.research.google.com/?utm_source=scs-index#scrollTo=-Rh3-Vt9Nev9)** este un mediu interactiv de programare în limbajul Python ce rulează direct în browser, fără a realiza vreo configurare pe mașina locală. Colab permite acces la resurse computaționale ce includ și putere de calcul grafic (GPU) și facilitează împărtășirea codului și colaborarea pentru redactarea acestuia. \n",
+        "**[Google Colab](https://colab.research.google.com/?utm_source=scs-index#scrollTo=-Rh3-Vt9Nev9)** este un mediu interactiv de programare în limbajul Python ce rulează direct în browser, fără a realiza vreo configurare pe mașina locală. Colab permite acces la resurse computaționale ce includ și putere de calcul grafic (GPU) și facilitează împărtășirea codului și colaborarea pentru redactarea acestuia.\n",
         "Singura cerință a Colab este ca utilizatorul să aibă asociat un cont Google. Notebook-urile create vor fi stocate automat în Google Drive într-un director creat automat și denumit `Colab Notebooks`.\n",
         "\n",
-        "De asemenea, este important de reținut faptul că în momentul inițializării unei sesiuni de Colab, acesteia i se alocă o [mașină virtuală temporară](https://research.google.com/colaboratory/faq.html) și în cadrul căreia datele salvate (de exemplu fișiere încărcate în sesiune sau salvate prin intermediul codului, dar cu excepția notebook-ului) sunt șterse la încheierea sesiunii. Pentru a stoca date persistent, se poate realiza o [conexiune la Google Drive](https://colab.research.google.com/notebooks/io.ipynb), iar în acest mod conținutul acestuia devine disponibil în notebook și fișierele pot fi încărcate și salvate direct în Google Drive. \n",
+        "De asemenea, este important de reținut faptul că în momentul inițializării unei sesiuni de Colab, acesteia i se alocă o [mașină virtuală temporară](https://research.google.com/colaboratory/faq.html) și în cadrul căreia datele salvate (de exemplu fișiere încărcate în sesiune sau salvate prin intermediul codului, dar cu excepția notebook-ului) sunt șterse la încheierea sesiunii. Pentru a stoca date persistent, se poate realiza o [conexiune la Google Drive](https://colab.research.google.com/notebooks/io.ipynb), iar în acest mod conținutul acestuia devine disponibil în notebook și fișierele pot fi încărcate și salvate direct în Google Drive.\n",
         "\n",
         "Google Colab este o extensie a [IPython](https://ipython.org/) (Interactive Python) și a mediului [Jupyter Notebook](https://jupyter.org/). În cadrul acestui mediu, codul este structurat în fișiere denumite *notebook-uri* cu extensia `*.ipynb`. Un notebook conține una sau mai multe *celule* de execuție. O celulă de execuție conține una sau mai multe linii de cod ce pot fi executate individual. Ordinea de execuție a celulelor poate fi aleatoare, iar programatorul poate reveni și schimba celule anterioare fără a afecta starea codului per ansamblu sau fără a fi nevoit să ruleze întreg notebook-ul din nou. Evident celulele ce depind de celula modificată vor trebui rerulate pentru ca modificările să aibă efect.\n",
         "\n",
-        "Celulele de cod sunt incluse în același domeniu de vizibilitate sau *namespace*. Acest lucru înseamnă că definirea unei variabile, funcții sau clase sau importul unui modul într-o celulă va face ca aceastea să fie disponibile și în restul celulelor din notebook-ul curent. Trebuie să subliniem faptul că în acest caz celulele trebuie rulate secvențial, în sensul că, dacă dorim să utilizăm o anumită variabilă, funcție, clasă sau modul, celula ce conține definirea lor trebuie rulată înainte de rularea celulelor ce modifică sau utilizează aceste componente ale codului. \n",
+        "Celulele de cod sunt incluse în același domeniu de vizibilitate sau *namespace*. Acest lucru înseamnă că definirea unei variabile, funcții sau clase sau importul unui modul într-o celulă va face ca aceastea să fie disponibile și în restul celulelor din notebook-ul curent. Trebuie să subliniem faptul că în acest caz celulele trebuie rulate secvențial, în sensul că, dacă dorim să utilizăm o anumită variabilă, funcție, clasă sau modul, celula ce conține definirea lor trebuie rulată înainte de rularea celulelor ce modifică sau utilizează aceste componente ale codului.\n",
         "\n",
         "Între celulele de cod pot fi inserate celule de text cu note explicative asociate codului. Celulele text folosesc notația de tip [Markdown](https://www.markdownguide.org/), dar pot fi augmentate cu notație HTML sau [LaTex](https://www.latex-project.org/).\n",
         "\n",
@@ -126,22 +125,10 @@
         "print('Salut, Python!')"
       ],
       "metadata": {
-        "id": "ArtJL3aliU7g",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2d9baab2-78fa-41ea-af3d-1078453210be"
+        "id": "ArtJL3aliU7g"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Salut, Python!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -158,22 +145,10 @@
         "print(\"Salut, Python!\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8Bffq69SAUJR",
-        "outputId": "0046d3e8-db69-48b5-8582-60b860d9bdb5"
+        "id": "8Bffq69SAUJR"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Salut, Python!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -196,9 +171,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5b8nGaTaAkal",
-        "outputId": "c179ea70-c169-4d54-d86d-4fc3b653c073"
+        "outputId": "c033a0b6-709d-4f0b-b704-a8831dbda5f1"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,9 +205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6Sh3OoaPBE94",
-        "outputId": "a4c9fa7f-f868-4bff-87d6-b19844dd81e8"
+        "outputId": "5dc63198-7f90-4802-bcf5-8e26c88b484f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,9 +240,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PCaYLFUICpFO",
-        "outputId": "e1038dad-e5b8-4c6f-b073-fc190b57c48b"
+        "outputId": "123b30c0-4d34-48e1-aa7a-f648ace22c23"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +266,7 @@
         "a = 3;\n",
         "```\n",
         "\n",
-        "Vom reveni mai în detaliu asupra acestor aspecte într-un tutorial viitor. "
+        "Vom reveni mai în detaliu asupra acestor aspecte într-un tutorial viitor."
       ],
       "metadata": {
         "id": "5Z7-B_kWDLYu"
@@ -318,12 +293,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 197
         },
         "id": "7Os9wH0WGA_J",
-        "outputId": "dfbae1b0-b7d1-4d5e-aacb-30dc9421ad29"
+        "outputId": "2e6dd4bd-eabe-4f09-830a-c248fc229295"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "error",
@@ -332,7 +307,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-e12f2049065b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Generarea unei erori\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0morint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Salut, Python!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-6-e12f2049065b>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Generarea unei erori\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0morint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Salut, Python!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m: name 'orint' is not defined"
           ]
         }
@@ -341,7 +316,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Mesajul de eroare ne va informa asupra liniei din cadrul celulei la care această eroare apare precum și tipul acesteia, în cazul de față `NameError`, interpretorul nu recunoaște funcția `orint()` deoarece aceasta nu este în lista funcțiilor predefinite sau definite anterior de către programator. \n",
+        "Mesajul de eroare ne va informa asupra liniei din cadrul celulei la care această eroare apare precum și tipul acesteia, în cazul de față `NameError`, interpretorul nu recunoaște funcția `orint()` deoarece aceasta nu este în lista funcțiilor predefinite sau definite anterior de către programator.\n",
         "\n",
         "Sau, am putea uita să închidem parantezele apelului funcției:"
       ],
@@ -392,20 +367,19 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 133
+          "base_uri": "https://localhost:8080/"
         },
         "id": "N-qIozlFI_nG",
-        "outputId": "6976517d-9488-430a-98b5-01323f8f05df"
+        "outputId": "d45b3fe3-a963-46f1-c20b-28efb02850c0"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-86d9f6177e11>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(\"Salut, Python\")\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Salut, Python\n",
+            "Salut, Python\n"
           ]
         }
       ]
@@ -413,7 +387,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "În cazul în care avem mai multe linii de cod, mesajul de eroare ne va indica linia ulterioară celei în care există o problemă de sintaxă. Eroarea noastră este prezentă în linia 2, dar mesajul ne indică linia 3. \n",
+        "În cazul în care avem mai multe linii de cod, mesajul de eroare ne va indica linia ulterioară celei în care există o problemă de sintaxă. Eroarea noastră este prezentă în linia 2, dar mesajul ne indică linia 3.\n",
         "\n",
         "Lista completă de erori definite în Python poate fi găsită pe [pagina oficială a documentației limbajului](https://docs.python.org/3/library/exceptions.html)."
       ],
@@ -450,7 +424,7 @@
         "\n",
         "## <font color=\"#e8710a\">Concluzii</font>\n",
         "\n",
-        "În acest prim tutorial de Python au fost introduse noțiunile minimale de utilizare a mediului Google Colab și de rulare a secvențelor de cod prin intermediul acestuia. În tutorialul următor vom introduce generalități ale limbajului Python și organizarea codului. "
+        "În acest prim tutorial de Python au fost introduse noțiunile minimale de utilizare a mediului Google Colab și de rulare a secvențelor de cod prin intermediul acestuia. În tutorialul următor vom introduce generalități ale limbajului Python și organizarea codului."
       ],
       "metadata": {
         "id": "r-3ZlQHHJnkp"
@@ -473,13 +447,26 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 1"
+        "## REZOLVARE EX. 1\n",
+        "print('salut,Cristian')"
       ],
       "metadata": {
-        "id": "QwQHtnIteX6v"
+        "id": "QwQHtnIteX6v",
+        "outputId": "c8886438-ad44-4bc2-eaf5-a04ed4acb168",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "salut,Cristian\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -493,13 +480,26 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 2"
+        "## REZOLVARE EX. 2\n",
+        "print('salut,Cristian')"
       ],
       "metadata": {
-        "id": "OZtnQOKfLddD"
+        "id": "OZtnQOKfLddD",
+        "outputId": "c98ca9e4-f441-4536-ca51-bb23d1c805ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "salut,Cristian\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -513,13 +513,26 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 3"
+        "## REZOLVARE EX. 3\n",
+        "print(type('salut,Cristian'))"
       ],
       "metadata": {
-        "id": "85E2WMqCLfGk"
+        "id": "85E2WMqCLfGk",
+        "outputId": "a0d6a334-a20d-4f8e-a3f8-773fc1905a93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'str'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -553,13 +566,28 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 5"
+        "## REZOLVARE EX. 5\n",
+        "a=3\n",
+        "b=4\n",
+        "print(a+b)"
       ],
       "metadata": {
-        "id": "iTV3S_1uLhyY"
+        "id": "iTV3S_1uLhyY",
+        "outputId": "776e5452-d424-4158-db44-89cb0944cb02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n"
+          ]
+        }
+      ]
     }
   ]
 }
